[gd_scene load_steps=8 format=2]

[ext_resource path="res://PixelInterface/Style/Stone.tres" type="StyleBox" id=1]
[ext_resource path="res://UI/PauseMenu/PauseMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://PixelInterface/Theme.tres" type="Theme" id=4]
[ext_resource path="res://addons/dialog_boxes/dialog_box.gd" type="Script" id=5]
[ext_resource path="res://UI/PauseMenu/MenuPopup.gd" type="Script" id=6]
[ext_resource path="res://Common/LocalScene.gd" type="Script" id=7]
[ext_resource path="res://UI/SavesMenu/SavesPopup.tscn" type="PackedScene" id=8]

[node name="LocalScene" type="Node2D"]
script = ExtResource( 7 )

[node name="World" type="YSort" parent="."]

[node name="SimpleDialogBox" type="CanvasLayer" parent="."]
script = ExtResource( 5 )
transition_time_ms = 200.0
text_speed = 30.0
height_percent = 0.3
margin = 5
theme = ExtResource( 4 )
panel_stylebox = ExtResource( 1 )

[node name="MenuLayer" type="CanvasLayer" parent="."]

[node name="MenuPopup" type="PopupPanel" parent="MenuLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -120.0
margin_right = 160.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 1 )
popup_exclusive = true
script = ExtResource( 6 )

[node name="PauseMenu" parent="MenuLayer/MenuPopup" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 14.0
margin_top = 14.0
margin_right = -14.0
margin_bottom = -14.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SavesPopup" parent="MenuLayer" instance=ExtResource( 8 )]
current_mode = 0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -3.2959, -9.58014 )
current = true
[connection signal="about_to_show" from="MenuLayer/MenuPopup" to="." method="_on_menu_about_to_show"]
[connection signal="focus_entered" from="MenuLayer/MenuPopup" to="." method="_on_MenuPopup_focus_entered"]
[connection signal="popup_hide" from="MenuLayer/MenuPopup" to="." method="_on_menu_popup_hide"]
[connection signal="about_to_show" from="MenuLayer/SavesPopup" to="." method="_on_menu_about_to_show"]
[connection signal="popup_hide" from="MenuLayer/SavesPopup" to="." method="_on_menu_popup_hide"]
